# website

./: Cargo.toml  index.html
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/css/: style.css
frontend/src/: lib.rs
frontend/src/routes/: mod.rs
frontend/src/views/: home.rs  not_found.rs
