[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( move aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using whole-program analysis
lto = true

[dev.dependencies]
wasm-bindgen-test = "0.3.0"

[dependencies]
# serialize/deserialize
serde = "1.0.204"
serde_json = "1.0.120"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-template = "0.10.0"



